Open in Parsley link now responds to middle click

--- a/fragments/parsely-links.html
+++ b/fragments/parsely-links.html
@@ -1,5 +1,5 @@
 <div class="parsely-link-block">
-  <a href="#" class="open-parsely">Open in Parsely</a>
+  <a href="#" class="open-parsely" target="_blank">Open in Parsely</a>
     &nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="#" class="get-total-views">Get Total Views</a>
 </div>
