--- a/css/styles.css
+++ b/css/styles.css
@@ -6,23 +6,28 @@
 .wp-editor-area.error {
   border: 2px solid red !important;
 }
+
 .hidden {
   display: none;
 }
+
 .proofreader-main-row td {
   padding: 2px 10px;
   width: 100%;
   border-bottom: 1px solid lightgrey;
 }
+
 .proofreader-main-row.error {
   background-color: #F2DEDE;
 }
+
 .headalyze {
   box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
   margin-bottom: 15px;
   border: 1px solid silver;
   -webkit-user-select: none; /* Chrome/Safari */
 }
+
 .headalyze-bar {
   height: 5px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c55854+0,f0cc55+50,7cc576+100 */
@@ -90,7 +95,6 @@
 /* Modal window styles */
 
 #bandaid-modal {
-  /*display: none;*/
   z-index: 100000;
   width: 700px;
   max-width: 70%;
@@ -202,4 +206,23 @@
   position: relative;
   top: 30px;
   left: 5px;
+  color: white;
 }
+
+#link-container a:link {
+  color: white;
+}
+
+#link-container a:visited {
+  color: white;
+}
+
+#link-container a:active {
+  color: white;
+}
+
+#link-container a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
