--- a/fragments/popup.html
+++ b/fragments/popup.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Options</h1>
-    <button id="fetchPosts">Get JS Posts</button>
+    <button id="fetchPosts">Get Channel Posts</button>
 
     <script src="../lib/jquery-2.1.1.min.js"></script>
     <script src="../lib/moment.min.js"></script>
