Add comments link to bottom of ToC

--- a/fragments/toc.hbs
+++ b/fragments/toc.hbs
@@ -17,6 +17,9 @@
         <a href="#{{this.slug}}">{{this.title}}</a>
       </li>
     {{/each}}
+      <li class="toc-h2">
+        <a href="#comments">Comments</a>
+      </li>
     </ul>
   </div>
 </div>
